<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">

    <TextView
        android:id="@+id/textTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/theme"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/settingText" />

    <TextView
        android:id="@+id/settingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/select"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/temp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/settingCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settingText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/settingCity"
        app:layout_constraintStart_toStartOf="@+id/settingCity"
        app:layout_constraintTop_toBottomOf="@+id/settingCity" />

    <CheckBox
        android:id="@+id/pressure1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/wind1"
        app:layout_constraintStart_toStartOf="@+id/wind1" />

    <CheckBox
        android:id="@+id/wind1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <CheckBox
        android:id="@+id/wet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wet"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/wind1"
        app:layout_constraintTop_toBottomOf="@+id/wind1" />

    <CheckBox
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pressure1"
        app:layout_constraintStart_toStartOf="@+id/pressure1" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTheme">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton6"
            android:textSize="30sp"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="112dp"
            android:text="@string/radioButton5"
            android:textSize="30sp"/>
        </RadioGroup>

    <Button
        android:id="@+id/acceptSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="56dp"
        android:background="@color/colorBlue"
        android:text="@string/accept"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>