<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWeather"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/textView3"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textWeather" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textView4"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewData"
        app:layout_constraintStart_toStartOf="@+id/textViewData"
        app:layout_constraintTop_toBottomOf="@+id/textViewData" />



    <TextView
        android:id="@+id/textViewData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textViewData"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

   <TextView
       android:id="@+id/pressure"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/pressure"
       android:textSize="30sp"
       android:layout_marginTop="40dp"
       android:layout_marginEnd="40dp"
       app:layout_constraintEnd_toEndOf="@id/imageView"
       app:layout_constraintTop_toBottomOf="@+id/textWeather"/>
    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/pressure"
        app:layout_constraintEnd_toEndOf="@id/pressure"/>
    <TextView
        android:id="@+id/wet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wet"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/wind"
        app:layout_constraintEnd_toEndOf="@id/wind"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/colorBlue"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/google"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/wet"
        app:layout_constraintVertical_bias="0.963" />


</androidx.constraintlayout.widget.ConstraintLayout>